error_templates/java/test_files/unreachable_statement_error/test.txt
template: "Java.UnreachableStatementError"
---
Unreachable.java:5: error: unreachable statement
        System.out.println("c");
        ^
1 error
===
template: "Java.UnreachableStatementError"
---
Your program attempted to access an element in index 5 on an array that has only 4 items
